# Taoism

./: .gitignore  CRAWLER_TEST_SUMMARY.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_OVERVIEW.md  README.md  SHIDIAN_CRAWLER_CONCLUSION.md  STRUCTURE.md  check_dependencies.py  check_translation_progress.py  clear_cache_and_test.py  crawler_dz1439_final.py  deploy.py  docker-compose.yml  dz1439_chapter_page.html  dz1439_complete.json  dz1439_info.json  emergency_fix.py  fix_all_imports.py  generate_scriptures_js.py  generate_templates.py  main.py  main_simple.py  pyproject.toml  quick_fix.py  requirements.txt  setup.py  simple_translator.py  temp_test_encoding.py  update_web_data.py  太上太清天童護命妙經.txt  爬蟲功能完整更新.md  黃帝陰符經.html
config/: ai_translation_guidelines.md  hidden_chapters.json  settings.example.json
core/: __init__.py  ai_engine.py  file_monitor.py  tracker.py  translator.py  unicode_handler.py
crawler/: README.md  README_更新說明.md  __init__.py  api_crawler.py  baopuzi_crawler.py  base_crawler.py  danyang_api_crawler.py  debug_SBCK109_1j70ybwytkcak_1.txt  debug_api_1_html.html  debug_api_2_html.html  debug_api_3_html.html  debug_api_4_html.html  debug_page.html  demo.py  final_solution.py  improved_demo.py  output.txt  page_analyzer.py  practical_guide.md  requirements.txt  run_crawler.py  selenium_crawler.py  shidian_crawler.py  shidian_selenium.py  shidian_simple.py  smart_crawler.py  taoism_crawler.py  url_finder.py  工具功能對照表.md  快速參考.md  快速參考卡.md  快速開始.md  檔案清單總覽.md  爬蟲工具說明文檔.md
data/: books.json
docs/: api-test.html  calendar.html  debug-calculation.html  deity-birthday.html  enhanced-calendar.html  index.html  quick-test.html  standard-algorithm-test.html  test-2025-10-27.html  test-deity.html  test-fortune.html  test-lunar-simple.html  test-lunar.html  verify-fix.html  web_data_report.md  六十甲子完整表.md  天干地支計算說明.md  拜拜好日子.md  農曆萬年曆更新說明.md  錯誤修正報告.md
source_texts/: 太上太清天童護命妙經.txt  雲笈七籤.txt  雲笈七籤121.txt  雲笈七籤33.txt  雲笈七籤60中山玉櫃服氣經.txt
tools/: add_hidden_chapters.py  ai_taoismRule.md  ai_translation_evaluator.py  ai_translator.py  chapter_id_analyzer.py  complete_unicode_fix.py  debug_DZ0336_structure.html  debug_discovery.py  debug_discovery_detailed.py  debug_href.py  easy_cli.py  fix_dz0336_structure.py  fix_hierarchical_chapters.py  fix_missing_chapters.py  fix_unicode_prints.py  migrate_data.py  monitor_cli.py  numeric_sequence_discovery.py  template_generator.py  update_readme.py
translations/: 本經陰符七術.md  雲笈七籤.md  (+3 more)
(+529 files in other folders)
